crates/plotnik-lib/tests/03-analyze/ref_resolution/undefined_reference_with_suggestion.txt
Expr = (identifier) @x
Q = (call_expression function: (Expl))
------------------ DIAGNOSTICS -------------------
error: `Expl` is not defined
 --> query.ptk:2:33
  |
2 | Q = (call_expression function: (Expl))
  |                                 ^^^^
  |
help: did you mean `(Expr)`?
  |
2 - Q = (call_expression function: (Expl))
2 + Q = (call_expression function: (Expr))
  |
help: `(Name)` uses a definition; define `Name = ...` or check the spelling
-------------------- SYMBOLS ---------------------
Expr
Q
  Expl?
